--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "colors": "^1.4.0",
     "cross-env": "7.0.3",
     "dayjs": "^1.10.4",
+    "eleventy-plugin-og-image": "^4.0.1",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-n": "^17.0.0",
