--- a/config/this-week-in-open-source.config.json
+++ b/config/this-week-in-open-source.config.json
@@ -508,7 +508,11 @@
         "mainmatter/ember-vite-codemod",
         "ember-cli/capture-exit",
         "ember-learn/ember-help-wanted",
-        "nickschot/ember-vite"
+        "nickschot/ember-vite",
+        "BlueCutOfficial/css-modules-to-scoped-css",
+        "adopted-ember-addons/ember-data-factory-guy",
+        "emberjs/ember-classic-decorator",
+        "soxhub/ember-scoped-css"
       ]
     },
     {
@@ -632,10 +636,18 @@
     "oscard0m/storyblok-js-client",
     "oscard0m/ember-website",
     "BlueCutOfficial/BlueCutOfficial",
-    "malone46/BewilderHouseOpSource"
+    "malone46/BewilderHouseOpSource",
+    "mainmatter/melt-ui",
+    "mainmatter/msw",
+    "mainmatter/mswjs.io",
+    "mainmatter/semantic-release",
+    "mainmatter/storyblok-js-client",
+    "mainmatter/svelte",
+    "mainmatter/tailwindcss.com",
+    "thedaviddias/Front-End-Performance-Checklist"
   ],
   "exclude_closed_not_merged": true,
   "output_path": "src/twios/",
-  "last_date": "",
+  "last_date": "2025-03-16..2025-03-23",
   "query_type": "Merged"
 }
