--- a/config/this-week-in-open-source.config.json
+++ b/config/this-week-in-open-source.config.json
@@ -508,7 +508,8 @@
         "mainmatter/ember-vite-codemod",
         "ember-cli/capture-exit",
         "ember-learn/ember-help-wanted",
-        "nickschot/ember-vite"
+        "nickschot/ember-vite",
+        "ember-cli/ember-addon-blueprint"
       ]
     },
     {
@@ -632,10 +633,11 @@
     "oscard0m/storyblok-js-client",
     "oscard0m/ember-website",
     "BlueCutOfficial/BlueCutOfficial",
-    "malone46/BewilderHouseOpSource"
+    "malone46/BewilderHouseOpSource",
+    "paoloricciuti/rccl.ink"
   ],
   "exclude_closed_not_merged": true,
   "output_path": "src/twios/",
-  "last_date": "",
+  "last_date": "2025-03-30..2025-04-06",
   "query_type": "Merged"
 }
