--- a/config/this-week-in-open-source.config.json
+++ b/config/this-week-in-open-source.config.json
@@ -516,7 +516,8 @@
         "emberjs/ember-classic-decorator",
         "soxhub/ember-scoped-css",
         "mainmatter/css-modules-to-scoped-css",
-        "pichfl/smite"
+        "pichfl/smite",
+        "ember-cli/ember-app-blueprint"
       ]
     },
     {
@@ -655,6 +656,6 @@
   ],
   "exclude_closed_not_merged": true,
   "output_path": "src/twios/",
-  "last_date": "",
+  "last_date": "2025-04-20..2025-04-27",
   "query_type": "Merged"
 }
