--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-node-resolve": "^16.0.0",
     "@rollup/plugin-terser": "^0.4.4",
-    "@tbranyen/jsdom": "13.0.0",
+    "jsdom": "^26.0.0",
     "broken-link-checker": "^0.7.8",
     "colors": "^1.4.0",
     "cross-env": "7.0.3",
