--- a/config/this-week-in-open-source.config.json
+++ b/config/this-week-in-open-source.config.json
@@ -107,7 +107,8 @@
         "sveltejs/esrap",
         "sveltejs/cli",
         "paoloricciuti/sveltekit-server-islands",
-        "paoloricciuti/bsky-svelte-feed"
+        "paoloricciuti/bsky-svelte-feed",
+        "pngwn/MDsveX"
       ]
     },
     {
@@ -657,6 +658,6 @@
   ],
   "exclude_closed_not_merged": true,
   "output_path": "src/twios/",
-  "last_date": "",
+  "last_date": "2025-05-04..2025-05-11",
   "query_type": "Merged"
 }
