--- a/config/this-week-in-open-source.config.json
+++ b/config/this-week-in-open-source.config.json
@@ -519,7 +519,9 @@
         "soxhub/ember-scoped-css",
         "mainmatter/css-modules-to-scoped-css",
         "pichfl/smite",
-        "ember-cli/ember-app-blueprint"
+        "ember-cli/ember-app-blueprint",
+        "blogic/ember-ui",
+        "mainmatter/ember-formatjs"
       ]
     },
     {
@@ -658,6 +660,6 @@
   ],
   "exclude_closed_not_merged": true,
   "output_path": "src/twios/",
-  "last_date": "",
+  "last_date": "2025-05-11..2025-05-18",
   "query_type": "Merged"
 }
