--- a/config/this-week-in-open-source.config.json
+++ b/config/this-week-in-open-source.config.json
@@ -660,6 +660,6 @@
   ],
   "exclude_closed_not_merged": true,
   "output_path": "src/twios/",
-  "last_date": "2025-05-11..2025-05-18",
+  "last_date": "",
   "query_type": "Merged"
 }
