--- a/config/this-week-in-open-source.config.json
+++ b/config/this-week-in-open-source.config.json
@@ -661,6 +661,6 @@
   ],
   "exclude_closed_not_merged": true,
   "output_path": "src/twios/",
-  "last_date": "2025-05-18..2025-05-25",
+  "last_date": "",
   "query_type": "Merged"
 }
