delete old workshop landing pages

--- a/package.json
+++ b/package.json
@@ -16,15 +16,11 @@
     "build": "cross-env ELEVENTY_ENV=production run-s build:sass build:js build:html",
     "build:html": "eleventy",
     "build:js": "rollup --config ./rollup.config.mjs",
-    "build:sass": "run-p build:sass:app build:sass:workshop-lp",
-    "build:sass:app": "sass src/assets/css/app.scss ./dist/assets/css/app.css --style=compressed",
-    "build:sass:workshop-lp": "sass src/assets/css/workshop-lp.scss ./dist/assets/css/workshop-lp.css --style=compressed",
+    "build:sass": "sass src/assets/css/app.scss ./dist/assets/css/app.css --style=compressed",
     "debug": "DEBUG=Eleventy* eleventy",
     "js": "rollup --config ./rollup.config.mjs --watch",
     "watch": "cross-env ELEVENTY_ENV=development && run-p sass js serve",
-    "sass": "run-p sass:app sass:workshop-lp",
-    "sass:app": "sass src/assets/css/app.scss ./dist/assets/css/app.css --style=compressed --watch",
-    "sass:workshop-lp": "sass src/assets/css/workshop-lp.scss ./dist/assets/css/workshop-lp.css --style=compressed --watch",
+    "sass": "sass src/assets/css/app.scss ./dist/assets/css/app.css --style=compressed --watch",
     "serve": "eleventy --incremental --quiet --serve --port=8080",
     "dev": "npm run watch",
     "percy:build": "run-s build percy:disable-lazy-images",
