--- a/config/this-week-in-open-source.config.json
+++ b/config/this-week-in-open-source.config.json
@@ -108,7 +108,8 @@
         "sveltejs/cli",
         "paoloricciuti/sveltekit-server-islands",
         "paoloricciuti/bsky-svelte-feed",
-        "pngwn/MDsveX"
+        "pngwn/MDsveX",
+        "mainmatter/svelte-custom-renderers"
       ]
     },
     {
@@ -522,7 +523,8 @@
         "ember-cli/ember-app-blueprint",
         "blogic/ember-ui",
         "mainmatter/ember-formatjs",
-        "ember-cli/update-blueprint-deps"
+        "ember-cli/update-blueprint-deps",
+        "emberjs/ember-inspector"
       ]
     },
     {
@@ -661,6 +663,6 @@
   ],
   "exclude_closed_not_merged": true,
   "output_path": "src/twios/",
-  "last_date": "",
+  "last_date": "2025-06-01..2025-06-08",
   "query_type": "Merged"
 }
