--- a/config/this-week-in-open-source.config.json
+++ b/config/this-week-in-open-source.config.json
@@ -524,7 +524,8 @@
         "blogic/ember-ui",
         "mainmatter/ember-formatjs",
         "ember-cli/update-blueprint-deps",
-        "emberjs/ember-inspector"
+        "emberjs/ember-inspector",
+        "ember-intl/ember-intl"
       ]
     },
     {
@@ -663,6 +664,6 @@
   ],
   "exclude_closed_not_merged": true,
   "output_path": "src/twios/",
-  "last_date": "",
+  "last_date": "2025-06-08..2025-06-15",
   "query_type": "Merged"
 }
