Set up redirects for ember and svelte to ember/svelte-consulting

--- a/netlify.toml
+++ b/netlify.toml
@@ -180,6 +180,14 @@
   to = "/"
 
 [[redirects]]
+  from = "/ember"
+  to = "/ember-consulting/"
+
+[[redirects]]
+  from = "/svelte"
+  to = "/svelte-consulting/"
+
+[[redirects]]
   from = "/rust"
   to = "/rust-consulting/"
 
