--- a/config/this-week-in-open-source.config.json
+++ b/config/this-week-in-open-source.config.json
@@ -109,7 +109,8 @@
         "paoloricciuti/sveltekit-server-islands",
         "paoloricciuti/bsky-svelte-feed",
         "pngwn/MDsveX",
-        "mainmatter/svelte-custom-renderers"
+        "mainmatter/svelte-custom-renderers",
+        "paoloricciuti/ricciuti.me"
       ]
     },
     {
@@ -525,7 +526,9 @@
         "mainmatter/ember-formatjs",
         "ember-cli/update-blueprint-deps",
         "emberjs/ember-inspector",
-        "ember-intl/ember-intl"
+        "ember-intl/ember-intl",
+        "NetrunnerDB/NRDBv2",
+        "yapplabs/ember-wormhole"
       ]
     },
     {
@@ -664,6 +667,6 @@
   ],
   "exclude_closed_not_merged": true,
   "output_path": "src/twios/",
-  "last_date": "",
+  "last_date": "2025-06-15..2025-06-22",
   "query_type": "Merged"
 }
