feat: remove paolo's private blog from Svelte category

--- a/config/this-week-in-open-source.config.json
+++ b/config/this-week-in-open-source.config.json
@@ -109,8 +109,7 @@
         "paoloricciuti/sveltekit-server-islands",
         "paoloricciuti/bsky-svelte-feed",
         "pngwn/MDsveX",
-        "mainmatter/svelte-custom-renderers",
-        "paoloricciuti/ricciuti.me"
+        "mainmatter/svelte-custom-renderers"
       ]
     },
     {
