--- a/netlify.toml
+++ b/netlify.toml
@@ -208,6 +208,14 @@
   from = "/embroider-initiative"
   to = "/ember-initiative/"
 
+# redirect /svelte-week to July '25 workshops
+[[redirects]]
+  from = "/svelte-week"
+  to = "/events/#svelte-5-and-runes"
+[[redirects]]
+  from = "/svelteweek"
+  to = "/events/#svelte-5-and-runes"
+
 # redirect old "Web-based Services in Rust" landing page to regular workshop
 [[redirects]]
   from = "https://rust-web-services-workshop.mainmatter.com/*"
