--- a/config/this-week-in-open-source.config.json
+++ b/config/this-week-in-open-source.config.json
@@ -672,6 +672,6 @@
   ],
   "exclude_closed_not_merged": true,
   "output_path": "src/twios/",
-  "last_date": "2025-07-06..2025-07-13",
+  "last_date": "",
   "query_type": "Merged"
 }
