--- a/config/this-week-in-open-source.config.json
+++ b/config/this-week-in-open-source.config.json
@@ -242,7 +242,9 @@
         "mansona/codeowners-commit",
         "mansona/commander-docs",
         "sveltejs/esrap",
-        "web-and-wine/talks"
+        "web-and-wine/talks",
+        "fabian-hiller/valibot",
+        "mdn/content"
       ]
     },
     {
@@ -668,10 +670,11 @@
     "mainmatter/tailwindcss.com",
     "thedaviddias/Front-End-Performance-Checklist",
     "paoloricciuti/rccl.ink",
-    "paoloricciuti/ricciuti.me"
+    "paoloricciuti/ricciuti.me",
+    "paoloricciuti/squiggles"
   ],
   "exclude_closed_not_merged": true,
   "output_path": "src/twios/",
-  "last_date": "",
+  "last_date": "2025-07-20..2025-07-27",
   "query_type": "Merged"
 }
