--- a/config/this-week-in-open-source.config.json
+++ b/config/this-week-in-open-source.config.json
@@ -679,6 +679,6 @@
   ],
   "exclude_closed_not_merged": true,
   "output_path": "src/twios/",
-  "last_date": "2025-08-03..2025-08-10",
+  "last_date": "",
   "query_type": "Merged"
 }
