add services to services pages

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "5.0.0",
     "@lhci/cli": "^0.14.0",
     "@percy/cli": "^1.28.7",
-    "@quasibit/eleventy-plugin-schema": "^1.12.0",
+    "@quasibit/eleventy-plugin-schema": "github:mainmatter/eleventy-plugin-schema#service",
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-node-resolve": "^16.0.0",
     "@rollup/plugin-terser": "^0.4.4",
